--- a/idcloud-idv/IdCloud KYC/Base.lproj/KYC.storyboard
+++ b/idcloud-idv/IdCloud KYC/Base.lproj/KYC.storyboard
@@ -98,17 +98,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H8F-ZZ-dlJ" userLabel="View Logo">
-                                <rect key="frame" x="107.5" y="60" width="199.5" height="714"/>
+                                <rect key="frame" x="107.5" y="60" width="199.5" height="664.5"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IdCloudLogo" translatesAutoresizingMaskIntoConstraints="NO" id="T8O-rA-eyS" userLabel="Image Logo">
-                                        <rect key="frame" x="16" y="327" width="60" height="60"/>
+                                        <rect key="frame" x="16" y="302.5" width="60" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="Jy2-NE-7Hi"/>
                                             <constraint firstAttribute="height" constant="60" id="TUY-L2-iz2"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IdCloud KYC" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="33I-7a-cAc" userLabel="Label Logo">
-                                        <rect key="frame" x="92" y="347.5" width="91.5" height="19.5"/>
+                                        <rect key="frame" x="92" y="322.5" width="91.5" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <color key="textColor" name="IdCloudRed"/>
                                         <nil key="highlightedColor"/>
@@ -122,23 +122,16 @@
                                     <constraint firstItem="T8O-rA-eyS" firstAttribute="centerY" secondItem="H8F-ZZ-dlJ" secondAttribute="centerY" id="kcO-WN-4b4"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TgA-qx-z7E" customClass="IdCloudButton">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TgA-qx-z7E" customClass="IdCloudButton">
                                 <rect key="frame" x="64" y="790" width="286" height="48"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.56307768489999999" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="300" id="76A-C2-ydD"/>
                                     <constraint firstAttribute="height" constant="48" id="XrP-Hv-uid"/>
                                 </constraints>
-                                <state key="normal">
-                                    <attributedString key="attributedTitle">
-                                        <fragment content="OnBoard">
-                                            <attributes>
-                                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                                <font key="NSFont" size="20" name="HelveticaNeue-Light"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                            </attributes>
-                                        </fragment>
-                                    </attributedString>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="20"/>
+                                <state key="normal" title="OnBoard">
+                                    <color key="titleColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -162,7 +155,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="INc-g5-D7x" kind="show" id="Ko0-Sc-iu3"/>
+                                    <action selector="onButtonPressedNext:" destination="kG2-Hs-yiX" eventType="touchUpInside" id="q93-nc-aGB"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJL-Rx-2Ef" userLabel="button_settings">
@@ -173,20 +166,30 @@
                                     <action selector="onButtonPressedSettings:" destination="kG2-Hs-yiX" eventType="touchUpInside" id="ZZu-qr-NQa"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Application requires JWT and API key to be configured. Please scanne given QR Code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="acs-Qh-N49">
+                                <rect key="frame" x="27.5" y="740.5" width="359.5" height="33.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" name="IdCloudRed"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="TgA-qx-z7E" firstAttribute="centerX" secondItem="Y21-4B-6mh" secondAttribute="centerX" id="2R4-w4-nhF"/>
                             <constraint firstItem="H8F-ZZ-dlJ" firstAttribute="top" secondItem="Y21-4B-6mh" secondAttribute="top" constant="16" id="4EK-mb-mpw"/>
+                            <constraint firstItem="acs-Qh-N49" firstAttribute="centerX" secondItem="Y21-4B-6mh" secondAttribute="centerX" id="4J1-ao-jUy"/>
+                            <constraint firstItem="TgA-qx-z7E" firstAttribute="top" secondItem="acs-Qh-N49" secondAttribute="bottom" constant="16" id="6Mu-dA-DJe"/>
+                            <constraint firstItem="acs-Qh-N49" firstAttribute="top" secondItem="H8F-ZZ-dlJ" secondAttribute="bottom" constant="16" id="9lW-nc-GDW"/>
                             <constraint firstItem="TgA-qx-z7E" firstAttribute="leading" secondItem="Y21-4B-6mh" secondAttribute="leading" priority="750" constant="64" id="K7L-fz-71y"/>
                             <constraint firstItem="H8F-ZZ-dlJ" firstAttribute="centerX" secondItem="Y21-4B-6mh" secondAttribute="centerX" id="UOj-DA-H2n"/>
                             <constraint firstItem="Y21-4B-6mh" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="H8F-ZZ-dlJ" secondAttribute="trailing" constant="16" id="Vdb-C1-HTB"/>
                             <constraint firstItem="Y21-4B-6mh" firstAttribute="trailing" secondItem="TgA-qx-z7E" secondAttribute="trailing" priority="750" constant="64" id="hXi-WD-vsd"/>
+                            <constraint firstItem="acs-Qh-N49" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Y21-4B-6mh" secondAttribute="leading" constant="16" id="ihX-kk-8Vo"/>
                             <constraint firstItem="Y21-4B-6mh" firstAttribute="bottom" secondItem="TgA-qx-z7E" secondAttribute="bottom" constant="24" id="jiz-hX-xJf"/>
                             <constraint firstItem="H8F-ZZ-dlJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Y21-4B-6mh" secondAttribute="leading" constant="16" id="s6E-sF-9uh"/>
                             <constraint firstItem="vJL-Rx-2Ef" firstAttribute="top" secondItem="Y21-4B-6mh" secondAttribute="top" id="sij-24-Hg1"/>
                             <constraint firstItem="vJL-Rx-2Ef" firstAttribute="leading" secondItem="Y21-4B-6mh" secondAttribute="leading" id="tcc-PB-ZSd"/>
-                            <constraint firstItem="TgA-qx-z7E" firstAttribute="top" secondItem="H8F-ZZ-dlJ" secondAttribute="bottom" constant="16" id="y5o-VP-hx4"/>
+                            <constraint firstItem="Y21-4B-6mh" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="acs-Qh-N49" secondAttribute="trailing" constant="16" id="ykW-Ef-OeF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Y21-4B-6mh"/>
                         <userDefinedRuntimeAttributes>
@@ -201,10 +204,15 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
+                    <connections>
+                        <outlet property="buttonNext" destination="TgA-qx-z7E" id="0VE-tc-j49"/>
+                        <outlet property="labelInit" destination="acs-Qh-N49" id="gfm-Ig-oRv"/>
+                        <segue destination="INc-g5-D7x" kind="show" identifier="sequeOpenNextPage" id="PAw-Cy-dBX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0My-Jw-ah1" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3666" y="1961"/>
+            <point key="canvasLocation" x="-3666.666666666667" y="1960.7142857142856"/>
         </scene>
         <!--KYC First View Controller-->
         <scene sceneID="yt7-HT-N8d">
@@ -1087,7 +1095,7 @@ GDPR compliant solution, no data is stored on the device.</string>
             <color red="0.10599999874830246" green="0.10599999874830246" blue="0.38400000333786011" alpha="0.25" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="IdCloudRed">
-            <color red="0.91764705882352937" green="0.015686274509803921" blue="0.21568627450980393" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.9179999828338623" green="0.016000000759959221" blue="0.21600000560283661" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="PrimaryGradientEnd">
             <color red="0.96078431372549022" green="0.96470588235294119" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
